Поправил демо картинки